objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>D_O__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>D&amp;O</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAC__c</fullName>
        <label>PAC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NFIP__c</fullName>
        <description>National Flood Insurance Program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>NFIP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Crime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Crime</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the affiliate is no longer an affiliated member of PPFA.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAC_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PAC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Staff__c</fullName>
        <label># of Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sum1AASC__c</fullName>
        <label>sum1AASC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sum2AASC__c</fullName>
        <label>sum2AASC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Staff__c</fullName>
        <formula>Legal__c  +  Communication_Marketing__c  +  Facility_Security__c  +  Information_Technology_Online_Services__c  +  Exec_Management_Admin_Support_Staff__c  +  Human_Resources_Volunteer_Support__c  +  Public_Policy_Advocacy_Political_Action__c  +  Accounting_Finance__c  +  Development_Fundraising__c  +  Medical_Billing__c  +  Call_Center__c  +  Other__c  +  Education_Communication_Outreach__c  +  Patient_Services_Administrative_Staff__c  +  Patient_Services_Clinical_Staff__c  +  Patient_Services_Clinical_Support_Staff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiduciary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fiduciary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERISA_Bond__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ERISA Bond</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAC_Budget__c</fullName>
        <label>PAC Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <label>Call Center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseSafe_ID__c</fullName>
        <description>Case Safe ID used for excel to mass updates can be done and Vlookups</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>Case Safe ID used for excel to mass updates can be done and Vlookups</inlineHelpText>
        <label>CaseSafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Change Effective:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to mass update to fire off workflow rules</description>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STI_HIVAASC__c</fullName>
        <label>STI HIV AASC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affiliate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Affiliate/Ancillary ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <description>email domain address for accounts.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>email domain address for accounts. For use with reporting</inlineHelpText>
        <label>Email Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>numLocations__c</fullName>
        <label>DAD Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <description>Power of one 
https://success.salesforce.com/answers?id=9063000000048RbAAI</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <label>Annual Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DAD_Last_Sync__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DAD Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Health Center</fullName>
                </value>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Ancillary Organizations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Miscellaneous E&amp;O</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specialty_E_O__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty E&amp;O</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APR_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APR Subscriber?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Dissolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Staff_Count__c</fullName>
        <label>All Staff Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Follow Up Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foreign_Package__c</fullName>
        <description>The date on this field is the renewal date for this coverage for this affiliate and indicates that ARMS has placed stand-alone coverage of this type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Foreign Package</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRS_Designation__c</fullName>
        <label>IRS Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>501c2</fullName>
                </value>
                <value>
                    <fullName>501c3</fullName>
                </value>
                <value>
                    <fullName>501c4</fullName>
                </value>
                <value>
                    <fullName>501e</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Billing__c</fullName>
        <label>Medical Billing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAD_Affiliate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>External Unique ID from DAD for Organizations</inlineHelpText>
        <label>DAD Affiliate ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Lead_Vetted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Lead Vetted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employed_Lawyers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employed Lawyers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIMS_Affiliate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AIMS Affiliate ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_Purpose__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Purpose</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEO_Account_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>CEO and CEO Executive Assistant have access to this field. System Admins can search this data, but it will not automatically be visible.</inlineHelpText>
        <label>CEO Account Notes (private)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracted_Amount__c</fullName>
        <label>Contracted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Security__c</fullName>
        <label>Facility/Security</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Source Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that a account shows in the list of accounts on the live chat initial connection page</description>
        <label>Live Chat Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SABA_Affiliate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SABA Affiliate ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wellWomenExamAASC__c</fullName>
        <label>DAD Well Woman Exam AASC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accounting_Finance__c</fullName>
        <label>Accounting/Finance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance for Continuing Education in the Health Professions (ACEhp) Conference</fullName>
                </value>
                <value>
                    <fullName>International Meeting on Simulation in Healthcare (IMSH)</fullName>
                </value>
                <value>
                    <fullName>International Federation of Gynecology and Obstetrics (FIGO) World Congress of Gynecology &amp; Obstetrics</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioners in Women’s Health (NPWH) Premier Women&apos;s Healthcare Conference</fullName>
                </value>
                <value>
                    <fullName>Learning Technologies</fullName>
                </value>
                <value>
                    <fullName>The American Congress of Obstetricians and Gynecologists (ACOG) Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>National Reproductive Health Conference (Title X)</fullName>
                </value>
                <value>
                    <fullName>National Medical Committee (NMC) / Forum on Family Planning (FFP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Quarter_c__c</fullName>
        <description>This provides a merge field used by Conga for the Quarterly Insurance Carrier update.</description>
        <formula>CASE( MONTH( ( TODAY() ) ),
4, &apos;Q1 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
5, &apos;Q1 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
6, &apos;Q1 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
7, &apos;Q2 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
8, &apos;Q2 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
9, &apos;Q2 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
10,&apos;Q3 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
11,&apos;Q3 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
12,&apos;Q3 - &apos;&amp; TEXT(YEAR(( TODAY() ))),
1,&apos;Q4 - &apos;&amp; TEXT(YEAR(( TODAY() ))-1),
2,&apos;Q4 - &apos;&amp; TEXT(YEAR(( TODAY() ))-1),
3,&apos;Q4 - &apos;&amp; TEXT(YEAR(( TODAY() ))-1),
&apos;0&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates prior quarter from today for the Insurance Carrier merge output.</inlineHelpText>
        <label>Previous Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Liability__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Products Liability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pregnancyTestsAASC__c</fullName>
        <label>DAD Pregnancy Tests AASC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affiliate_Site_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliate Site Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalVisitsQVOL_YTD__c</fullName>
        <label>Total Visits QVOL YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affiliate_Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliate Legal Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used only for Ancillary Organizations</inlineHelpText>
        <label>Ancillary Legal Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Account_s__c</fullName>
        <description>This is a text field to indicate the associated affiliates for an ancillary account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is a text field to indicate the associated affiliates for an ancillary account.</inlineHelpText>
        <label>Associated Account(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DAD_Affiliate_Budget__c</fullName>
        <label>DAD Affiliate Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Affiliate_Event__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Affiliate Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_CEO_Orientation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last CEO Orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Onsite_Workshop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Onsite Workshop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Affiliate_Event__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Affiliate Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_CEO_Orientation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next CEO Orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Onsite_Workshop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Onsite Workshop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Visits_QVOL_Q1__c</fullName>
        <label>DAD Total Visits QVOL Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Visits_QVOL_Q2__c</fullName>
        <label>DAD Total Visits QVOL Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Visits_QVOL_Q3__c</fullName>
        <label>DAD Total Visits QVOL Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ancillary_Entity_Type__c</fullName>
        <label>Ancillary Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Provider</fullName>
                </value>
                <value>
                    <fullName>Public Action Entity</fullName>
                </value>
                <value>
                    <fullName>Real Estate Company</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Action Fund/Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Clinic/Service Provider</fullName>
                </value>
                <value>
                    <fullName>Endowment Fund</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Holding Company</fullName>
                </value>
                <value>
                    <fullName>SPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_Account_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inactive or Dissolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_ARMS_Orientation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last ARMS Orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Program_Interest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Program Interest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_RQM_Consultation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last RQM Consultation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_ARMS_Orientation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next ARMS Orientation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Program_Interest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Program Interest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_RQM_Consultation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next RQM Consultation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupancy_Description__c</fullName>
        <label>Occupancy Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Family Planning/Education/Counseling</fullName>
                </value>
                <value>
                    <fullName>Medical Clinic/Health Services</fullName>
                </value>
                <value>
                    <fullName>Administrative and Medical Clinic</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Surgical and Family Planning</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Laboratory</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Under Construction</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Distribution/Warehousing</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vetting_Outcome_Notes__c</fullName>
        <description>Mapped from Lead object&apos;s Vetting Outcome Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vetting Outcome Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalPatientsQVOL_YTD__c</fullName>
        <label>Total Patients QVOL YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affiliate_Merging_With__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of affiliate(s) that are merging together.</inlineHelpText>
        <label>Affiliate Merging With:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ancillary_Audit_Waiver__c</fullName>
        <label>Ancillary Audit Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audit Waiver</fullName>
                </value>
                <value>
                    <fullName>Consolidated with Affiliate</fullName>
                </value>
                <value>
                    <fullName>Separate Audit</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ancillary_of_Directors__c</fullName>
        <label>Ancillary # of Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Planning__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Activity Planning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Introductory_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Introductory Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Train_the_trainer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Train-the-trainer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Activity_Planning__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Activity Planning</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Introductory_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Introductory Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Train_the_trainer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Train-the-trainer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Invoice_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Projected Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Patients_QVOL_Q1__c</fullName>
        <label>DAD Total Patients QVOL Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Patients_QVOL_Q2__c</fullName>
        <label>DAD Total Patients QVOL Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Patients_QVOL_Q3__c</fullName>
        <label>DAD Total Patients QVOL Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type_Department__c</fullName>
        <label>Account Type Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>CAL</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>RQPS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate_Location_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliate Location Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Marketing__c</fullName>
        <label>Communication/Marketing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Fundraising__c</fullName>
        <label>Development/Fundraising</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_PelvicSim_Didactic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last PelvicSim Didactic</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Accreditation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field will be populated by the System Administrator.</inlineHelpText>
        <label>Next Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_PelvicSim_Didactic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next PelvicSim Didactic</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Merger_Affiliate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Pre-Merger Affiliate ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Archive_Change__c</fullName>
        <inlineHelpText>Indicate what change is happening with this archived affiliate.</inlineHelpText>
        <label>Affiliate Archive Change:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merge</fullName>
                </value>
                <value>
                    <fullName>Disaffiliated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name_for_Invoice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name for Invoice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_PelvicSim_Practicum__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last PelvicSim Practicum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NEW_Affiliate_Name_Merge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If affiliates are merging together and creating a NEW affiliate name - enter that name here.</inlineHelpText>
        <label>NEW Affiliate Name (Merge)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_PelvicSim_Practicum__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next PelvicSim Practicum</label>
        <type>Date</type>
    </fields>
</CustomObject>